src/components/ApplicationDashboard/application-dashboard.module.scss
.app_dashboard {
  &__deposits, &__widthdraw {
    border-radius: 8px;
    padding: 30px 20px;
    font-size: 18px;
    background: var(--main-bg-color);

    &__header {
      color: white;
      font-size: 1.1em;
      font-weight: 500;
      margin-bottom: 20px;
    }
  }

  &__withdraw {
    &__info {
      margin-top: 20px;
      background: var(--light-bg-color);
      padding: 12px 36px;
      border-radius: 8px;
      display: flex;
      justify-content: space-between;
      align-items: center;
      font-size: 0.9em;
      color: white;

      span, i {
        font-style: normal;
        color: var(--main-design-color);
      }

      span {
        margin-left: 15px;
      }
    }

    &__button_wrapper {
      margin-top: 40px;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      color: white;

      span {
        color: var(--main-design-color);
        font-size: 1.2em;
        margin-bottom: 30px;
        font-weight: 800;
      }

      p {
        margin-top: 15px;
        margin-bottom: 20px;
        font-size: 1em;
      }

      svg {
        width: 2em;
        height: 2em;
        color: var(--main-design-color)
      }
    }
  }

  &__deposits {

    &__info {
      background: var(--light-bg-color);
      width: 100%;
      margin-top: 20px;
      border-collapse: collapse;
      border-radius: 8px;

      th, td {
        padding: 8px;
        border-bottom: 1px solid rgba(white, 0.05);
      }

      tbody {
        tr:last-child {
          td {
            &:first-child {
              border-bottom-left-radius: 8px;
            }

            &:last-child {
              border-bottom-right-radius: 8px;
            }
          }
        }
      }

      td {
        text-align: center;
        color: white
      }

      thead {
        th:first-child {
          border-top-left-radius: 8px;
        }
        th:last-child {
          border-top-right-radius: 8px;
        }

        th {
          text-align: center;
          font-weight: 400;
          font-size: .8em;
          color: var(--light-text-color)
        }
      }

      &__status {
        background: var(--additional-bg-color);
        display: inline-block;
        width: 200px;
        height: 7px;
        border-radius: 3px;
        position: relative;

        span {
          position: absolute;
          left: 0;
          top: 0;
          border-radius: inherit;
          height: 100%;
          background: var(--main-design-color);
        }
      }
    }
  }
}

